crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__ams2_normalized_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 45
steering_angle: 0.15
throttle: 0.75
brake: 0
clutch: 0
rpm: 7200
max_rpm: 8500
gear: 4
num_gears: 6
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0.060000002
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0.15
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: Formula_Trainer
track_id: Interlagos
position: 0
lap: 3
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.5416667
engine_temp_c: 0
extended:
  fuel_capacity_l:
    type: Float
    value: 60
  fuel_level_l:
    type: Float
    value: 32.5
sequence: 0
