crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__ets2_realistic_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 25
steering_angle: -0.030545
throttle: 0.7
brake: 0
clutch: 0
rpm: 1400
max_rpm: 2200
gear: 8
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0.16333336
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.65
engine_temp_c: 87
extended:
  engine_load:
    type: Float
    value: 0.55
sequence: 0
