crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__gran_turismo_7_heavy_braking_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 25
steering_angle: 0
throttle: 0
brake: 0.9490196
clutch: 0
rpm: 4200
max_rpm: 9000
gear: 2
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 105
  - 107
  - 95
  - 96
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: true
  engine_limiter: true
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: gt7_1887
position: 0
lap: 10
current_lap_time_s: 0
best_lap_time_s: 82
last_lap_time_s: 83.5
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.36666667
engine_temp_c: 97
sequence: 0
