crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__gran_turismo_7_realistic_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 68
steering_angle: 0
throttle: 0.84705883
brake: 0
clutch: 0
rpm: 9200
max_rpm: 9500
gear: 6
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 90
  - 92
  - 88
  - 89
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: gt7_3333
position: 0
lap: 12
current_lap_time_s: 0
best_lap_time_s: 78
last_lap_time_s: 79.2
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.7
engine_temp_c: 95
sequence: 0
