crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__gran_turismo_7_type2_extended_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 52
steering_angle: -0.35
throttle: 0.7176471
brake: 0
clutch: 0
rpm: 7400
max_rpm: 8800
gear: 5
num_gears: 0
lateral_g: 0.22
longitudinal_g: 0.65
vertical_g: -0.08
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 91
  - 93
  - 87
  - 88
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: gt7_2750
position: 0
lap: 5
current_lap_time_s: 0
best_lap_time_s: 91.2
last_lap_time_s: 92.8
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.43076923
engine_temp_c: 93
extended:
  gt7_heave:
    type: Float
    value: -0.08
  gt7_surge:
    type: Float
    value: 0.65
  gt7_sway:
    type: Float
    value: 0.22
sequence: 0
