crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__gran_turismo_7_type3_full_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 38
steering_angle: 0.12
throttle: 0.44705883
brake: 0
clutch: 0
rpm: 5800
max_rpm: 7500
gear: 3
num_gears: 0
lateral_g: -0.1
longitudinal_g: 0.4
vertical_g: 0.02
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 78
  - 80
  - 76
  - 77
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: gt7_5100
position: 0
lap: 8
current_lap_time_s: 0
best_lap_time_s: 102.5
last_lap_time_s: 104.1
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.3272727
engine_temp_c: 88
extended:
  gt7_car_type:
    type: Integer
    value: 4
  gt7_energy_recovery:
    type: Float
    value: 62.5
  gt7_heave:
    type: Float
    value: 0.02
  gt7_surge:
    type: Float
    value: 0.4
  gt7_sway:
    type: Float
    value: -0.1
sequence: 0
