crates/telemetry-adapters/tests/snapshots/snapshots_games_v7__iracing_realistic_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v7.rs
expression: normalized
---
speed_ms: 62
steering_angle: -0.08
throttle: 0.92
brake: 0
clutch: 0
rpm: 7800
max_rpm: 0
gear: 4
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
car_id: dallarair18
track_id: indianapolis
position: 0
lap: 8
current_lap_time_s: 0
best_lap_time_s: 82.5
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  ffb_scalar_source:
    type: String
    value: unknown
  fuel_level:
    type: Float
    value: 15
  session_flags_raw:
    type: Integer
    value: 4
  session_time:
    type: Float
    value: 120.5
sequence: 0
